// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecommendationWrapper /> should match a snapshot with items 1`] = `
<RecommendationWrapper
  addObserve={[Function]}
  items={
    Array [
      Object {
        "name": "first item",
      },
      Object {
        "name": "second item",
      },
    ]
  }
  onInViewport={[MockFunction]}
  onItemClick={[MockFunction]}
  title="Test title"
>
  <div
    className="wrapper"
  >
    <MobileLayout>
      <div
        className="layout mobile "
      >
        <ForwardRef(Text)
          element="h4"
          lineHeight={28}
          size={20}
          weight={500}
        >
          <h4
            className="size-20 line-height-28 weight-500"
          >
            Test title
          </h4>
        </ForwardRef(Text)>
      </div>
    </MobileLayout>
    <TouchSlider>
      <MobileLayout>
        <div
          className="layout mobile "
        >
          <div
            className="outer invisible-scroll"
          >
            <div
              className="inner"
            >
              <RecommendedItem
                canLoadImage={false}
                key="0"
                name="first item"
                needLoadImage={true}
                onItemClick={[Function]}
              >
                <div
                  className="item"
                >
                  <ForwardRef(Link)
                    className="link"
                    color="gray87"
                    onClick={[Function]}
                  >
                    <a
                      className="link link color__gray87 hover-color__gray54"
                      data-testid="anchor"
                      onClick={[Function]}
                    >
                      first item
                    </a>
                  </ForwardRef(Link)>
                </div>
              </RecommendedItem>
              <RecommendedItem
                canLoadImage={false}
                key="1"
                name="second item"
                needLoadImage={true}
                onItemClick={[Function]}
              >
                <div
                  className="item"
                >
                  <ForwardRef(Link)
                    className="link"
                    color="gray87"
                    onClick={[Function]}
                  >
                    <a
                      className="link link color__gray87 hover-color__gray54"
                      data-testid="anchor"
                      onClick={[Function]}
                    >
                      second item
                    </a>
                  </ForwardRef(Link)>
                </div>
              </RecommendedItem>
            </div>
          </div>
        </div>
      </MobileLayout>
    </TouchSlider>
  </div>
</RecommendationWrapper>
`;

exports[`<RecommendationWrapper /> should match a snapshot without items 1`] = `
<RecommendationWrapper
  addObserveWithMargin={[Function]}
  onRequest={[MockFunction]}
>
  <div
    className="wrapper"
  >
    <MobileLayout>
      <div
        className="layout mobile "
      >
        <ForwardRef(Text)
          element="h4"
          lineHeight={28}
          size={20}
          weight={500}
        >
          <h4
            className="size-20 line-height-28 weight-500"
          />
        </ForwardRef(Text)>
      </div>
    </MobileLayout>
    <TouchSlider>
      <MobileLayout>
        <div
          className="layout mobile "
        >
          <div
            className="outer invisible-scroll"
          >
            <div
              className="inner"
            />
          </div>
        </div>
      </MobileLayout>
    </TouchSlider>
  </div>
</RecommendationWrapper>
`;
